// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 36,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 0,
        "flexDirection": "row",
        "height": 100,
        "justifyContent": "flex-start",
        "left": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 1000,
        "zIndex": -1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 108,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 100,
            "marginBottom": -22,
            "marginRight": 5,
            "marginTop": -12,
          }
        }
      >
        T
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 17,
          "height": undefined,
          "left": 100,
          "lineHeight": 26,
          "marginBottom": 20,
          "position": "absolute",
          "top": 0,
          "width": 380,
        }
      }
    >
      his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.  
    </Text>
  </View>
</View>
`;

exports[`2. responsive tablet paragraph 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 17,
        "lineHeight": 26,
        "marginBottom": 20,
      }
    }
  >
    This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </Text>
</View>
`;

exports[`3. responsive tablet paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 36,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 0,
        "flexDirection": "row",
        "height": 100,
        "justifyContent": "flex-start",
        "left": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 1000,
        "zIndex": -1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 108,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 100,
            "marginBottom": -22,
            "marginRight": 5,
            "marginTop": -12,
          }
        }
      >
        T
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 17,
          "height": undefined,
          "left": 100,
          "lineHeight": 26,
          "marginBottom": 20,
          "position": "absolute",
          "top": 0,
          "width": 560,
        }
      }
    >
      his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.  
    </Text>
  </View>
</View>
`;
